Feat : adding PHP version & Framway version to Smartgear API version
